<resources>
    <string name="app_name">HomeSecurityInKotlin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in">Log in</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="notifiable_phone_number">Notifiable phone number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="not_binary">Not binary</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="marketing">Marketing:</string>
    <string name="otthonbiztonsagbme_gmail_com">otthonbiztonsagbme@gmail.com</string>
    <string name="support">Support:</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="email_notification">Email notification</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="sms_notification">Sms notification</string>
    <string name="noise_detection">Noise detection</string>
    <string name="language">Language</string>
    <string name="notifies_and_sound">Notifies and sound</string>
    <string name="log_out">Log out</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="homeSecurity_v1_0_0">HomeSecurity v1.0.0</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="about_us">About us</string>
    <string name="attila_toth_production">Attila Toth Production</string>
    <string name="debrecen_hb_4031">Debrecen, HB 4031</string>
</resources>
