<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/email_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="20dp"
            android:text="@string/email_notification"
            android:textSize="20sp"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:checked="false"/>
        <!--android:theme="@style/CustomColorSwitchStyle"-->

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sms_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="20dp"
            android:text="@string/sms_notification"
            android:textSize="20sp"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:checked="false" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/noise_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="20dp"
            android:text="@string/noise_detection"
            android:textSize="20sp"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:checked="false" />

        <TextView
            android:id="@+id/languageSetting_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="20dp"
            android:text="@string/language"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/notifies_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="20dp"
            android:text="@string/notifies_and_sound"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/log_out_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="20dp"
            android:text="@string/log_out"
            android:clickable="true"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:focusable="true" />

        <TextView
            android:id="@+id/feedback_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="20dp"
            android:text="@string/feedback"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/help_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="20dp"
            android:text="@string/help"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeSecurity_v1_0_0"
            android:textColor="@color/black"
            android:layout_gravity="bottom|center"
            android:textSize="12sp"/>
    </LinearLayout>
</ScrollView>