<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/aluminum"
            android:paddingTop="@dimen/profile_data_padding"
            android:paddingBottom="@dimen/profile_data_padding"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:drawableBottom="@drawable/section_header"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/profile_data_padding"
            android:paddingStart="@dimen/profile_data_padding"
            android:paddingEnd="@dimen/profile_data_padding"
            android:paddingBottom="@dimen/profile_data_padding"
            android:textColor="@color/black"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@color/colorPrimary"
            android:drawableBottom="@drawable/section_header"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/profile_data_padding"
            android:paddingStart="@dimen/profile_data_padding"
            android:paddingEnd="@dimen/profile_data_padding"
            android:paddingBottom="@dimen/profile_data_padding"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/colorPrimary"
            android:drawableBottom="@drawable/section_header"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/profile_data_padding"
            android:paddingStart="@dimen/profile_data_padding"
            android:paddingEnd="@dimen/profile_data_padding"
            android:paddingBottom="@dimen/profile_data_padding"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/colorPrimary"
            android:drawableBottom="@drawable/section_header"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/profile_data_padding"
            android:paddingStart="@dimen/profile_data_padding"
            android:paddingEnd="@dimen/profile_data_padding"
            android:paddingBottom="@dimen/profile_data_padding"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/colorPrimary"
            android:drawableBottom="@drawable/section_header"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/profile_data_padding"
            android:paddingStart="@dimen/profile_data_padding"
            android:paddingEnd="@dimen/profile_data_padding"
            android:paddingBottom="@dimen/profile_data_padding"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>

